# monportail-cli

./: .gitignore  README.md  monportail-cli.cabal
app/: Main.hs
src/: Authentication.hs  Calendar.hs  Exceptions.hs  Parser.hs  UI.hs
test/: Spec.hs  TestAuthentication.hs
