name:                monportail-cli
version:             0.1.0
-- synopsis:
-- description:
homepage:            https://github.com/AntoineGagne/monportail-cli#readme
license:             BSD3
license-file:        LICENSE
author:              Antoine Gagné
maintainer:          antoine.gagne.2@ulaval.ca
copyright:           2017 Antoine Gagné
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable monportail-cli
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
