name:                monportail-cli
version:             0.1.0
-- synopsis:
-- description:
homepage:            https://github.com/AntoineGagne/monportail-cli#readme
license:             BSD3
license-file:        LICENSE
author:              Antoine Gagné
maintainer:          antoine.gagne.2@ulaval.ca
copyright:           2017 Antoine Gagné
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable monportail-cli
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , lens
                     , http-client
                     , http-client-tls
                     , monportail-cli
                     , parsec
                     , text
                     , wreq

library
  hs-source-dirs:      src
  exposed-modules:     Authentication
                     , Calendar
                     , Parser
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , lens
                     , http-client
                     , http-client-tls
                     , parsec
                     , text
                     , time
                     , wreq

test-suite monportail-cli-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       TestAuthentication
  default-language: Haskell2010
  build-depends:       base
                     , monportail-cli
                     , HUnit
                     , aeson
                     , bytestring
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
